# API-Cost-X

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install.sh  start.sh
api/: README.md  pyproject.toml
api/app/: __init__.py  config.py  desktop.py  main.py
api/app/adapters/: __init__.py  base.py
api/app/adapters/aiq/: __init__.py  adapter.py
api/app/adapters/combine/: adapter.py  config.py
api/app/adapters/dr/: adapter.py
api/app/adapters/fpf/: README.md  __init__.py  adapter.py  config.py  errors.py  result.py
api/app/adapters/gptr/: adapter.py  config.py
api/app/api/: router.py
api/app/api/routes/: __init__.py  contents.py  github_connections.py  health.py  internal_dashboard.py  models.py  presets.py  run_sections.py  settings.py
api/app/api/schemas/: __init__.py  content.py  github_connection.py  models.py  presets.py  runs.py
api/app/auth/: middleware.py  user_registry.py
api/app/combine/: __init__.py  service.py  source_handler.py
api/app/combine/strategies/: __init__.py  best_of_n.py  concatenate.py  intelligent_merge.py  section_assembly.py
api/app/config/: models.yaml
api/app/evaluation/: __init__.py  criteria.py  elo.py  judge.py  models.py  pairwise.py  service.py  single_doc.py
api/app/evaluation/reports/: actuals.py  expected.py  models.py  (+2 more)
api/app/infra/: __init__.py  env_context.py
api/app/schemas/: __init__.py
api/app/security/: github_tokens.py  key_injection.py
api/app/seed/: README.md  __init__.py  api-cost-x.seed.db  base_database.py
api/app/services/: compiled_run_config.py  config_builder.py  export_service.py  github_input_service.py  key_mode_resolver.py  log_reader.py  log_writer.py  model_service.py  output_writer.py  preset_execution.py  preset_validator.py  rate_limiter.py  results_reader.py  results_writer.py  run_analytics.py  run_callbacks.py  run_detail_cache.py  run_executor.py  run_finalization_recovery.py  run_resumability.py  source_doc_pipeline.py
api/app/utils/: __init__.py  logging_utils.py  paths.py
api/tests/: test_combine_no_fallback.py  test_config.py  test_content_criteria_validation.py  test_desktop_browser_flag.py  test_error_sanitization.py  test_run_resumability.py  test_run_update_schema_dedup.py
api/tools/: compiled_run_readiness_audit.py  config_overrides_dead_key_audit.py  preset_compile_audit.py
(+168 files in other folders)
